GFM Up to Date with RAM Dismantlement

--- a/GFM/localisation/__RAM_dismantlement.csv
+++ b/GFM/localisation/__RAM_dismantlement.csv
@@ -21,14 +21,22 @@ dismantlement_loc_14;§b independence movement, based in §!;;;;;;;;;;;;;
 dismantlement_loc_15;§b, seeks freedom from §!;;;;;;;;;;;;;
 dismantlement_loc_16;§b. We must decide whether to support §!;;;;;;;;;;;;;
 dismantlement_loc_17;§b's independence, preserve §!;;;;;;;;;;;;;
-dismantlement_loc_18;§b's borders, or seek a more lucrative arangement.§!;;;;;;;;;;;;;
+dismantlement_loc_18;§b's borders, or seek a more lucrative arangement.      §!;;;;;;;;;;;;;
 dismantlement_loc_19;§bOur newly independent nation, born from the remnats of §!;;;;;;;;;;;;;
 dismantlement_loc_20;§b, is unexpectedly constrained by the Treaty of §!;;;;;;;;;;;;;
 dismantlement_loc_21;§b. Despite our lack of influence in the war, the victorious powers imposed strict limits on our military development, citing "regional stability concerns." Our rich natural resources, once the pride of our region, were now subject to "international oversight," with §!;;;;;;;;;;;;;
 dismantlement_loc_22;§b companies gaining preferential access through opaque agreements. As we struggle to assert our sovereignty, our people are begining to realize that independence on paper has not necessarily translated to true self-determination.§!;;;;;;;;;;;;;
 dismantlement_loc_23;§bIntergrate into §!;;;;;;;;;;;;;
 dismantlement_loc_24;Choose a Great Power to dismantle|;;;;;;;;;;;;;
-EVT20405OPTA;Liberate & Overwrite New States;;;;;;;;;;;;;
-EVT20405OPTB;Liberate Within the Remaining Boundaries;;;;;;;;;;;;;
-EVT20405OPTC;Install Our Own Regime [§B-3§!] [§R+2§!];;;;;;;;;;;;;
-EVT20405OPTD;Annex for Ourselves [§B-7§!] [§R+5§!];;;;;;;;;;;;;
+dismantlement_loc_25;§bThis can be used for high-stakes options during the following dismantlement conference, such as annexing, puppeting and taking colonies. This metric has a base value of §B10§b and is calculated based on following conditions|§!;;;;;;;;;;;;;
+dismantlement_loc_26;Mass Politics Researched|;;;;;;;;;;;;;
+dismantlement_loc_27;In Default|;;;;;;;;;;;;;
+dismantlement_loc_28;Ships;;;;;;;;;;;;;
+dismantlement_loc_29;Troops;;;;;;;;;;;;;
+dismantlement_loc_30;Funds;;;;;;;;;;;;;
+dismantlement_total_currency;Total Dismantlement Dollars|;;;;;;;;;;;;;
+dismantlement_total_number;§B36§!;;;;;;;;;;;;;
+EVTDismantlementOverwriteOPTA;Liberate & Overwrite New States;;;;;;;;;;;;;
+EVTDismantlementLiberateOPTB;Liberate Within the Remaining Boundaries;;;;;;;;;;;;;
+EVTDismantlementPuppetOPTC;Install Our Own Regime [§B-3§!] [§R+2§!];;;;;;;;;;;;;
+EVTDismantlementAnnexOPTD;Annex for Ourselves [§B-7§!] [§R+5§!];;;;;;;;;;;;;
