--- a/GFM/localisation/___RAM.csv
+++ b/GFM/localisation/___RAM.csv
@@ -44,6 +44,8 @@ commabreak_state;,;;;;;;;;;;;;;
 tabbreak_state;    ;;;;;;;;;;;;;
 spacebreak_state; ;;;;;;;;;;;;;
 flexicommabreak_state;,;;;;;;;;;;;;;
+backslash;/;;;;;;;;;;;;;
+colon;|;;;;;;;;;;;;;
 loc_and;and;;;;;;;;;;;;;
 fullstop_state;.;;;;;;;;;;;;;
 white;§W;;;;;;;;;;;;;
