--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -611,6 +611,7 @@ KKP_constitutional_empire;The Torani Empire;;;;;;;;;;;;;
 KKP_absolute_empire_ADJ;Torani;;;;;;;;;;;;;
 KKP_semi_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
 KKP_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
+KKP_ADJ;Karakalpak;;;;;;;;;;;;;
 EVTNAME811;Ordinance on the National Flag;;;;;;;;;;;;;
 EVTDESC811;\n\nWith the recent unification of Italy, confusion is abound regarding the national flag. Some are seen flying Savoyard banners and a foreign match company has even printed them on their boxes as our official flag! We should make it clear that we have but one flag of Italy: it is the one with our ancient and complex dynastic achievements right in the middle.;;;;;;;;;;;;;
 EVT811OPTA;Sign it!;;;;;;;;;;;;;
