some stuff is left

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -123,7 +123,7 @@ PROV3279;Viransehir;;;;;;;;;;;;;
 PROV3292;Fallujah;;;;;;;;;;;;;
 PROV3316;Ilisu;;;;;;;;;;;;;
 PROV3323;Karimabad;;;;;;;;;;;;;
-PROV3325;Tell Tamir;;;;;;;;;;;;;
+PROV3325;Tel Keppe;;;;;;;;;;;;;
 PROV3348;Maku;;;;;;;;;;;;;
 PROV3350;Qa'in;;;;;;;;;;;;;
 PROV3352;Sarpol-e Zahab;;;;;;;;;;;;;
