--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -658,7 +658,7 @@ PROV3401;Fraga;;;;;;;;;;;;;
 PROV3402;Chi'kaannaj;;;;;;;;;;;;;
 PROV3403;Neybe;;;;;;;;;;;;;
 PROV3404;al-Salman;;;;;;;;;;;;;
-PROV3405;Kobajjep;;;;;;;;;;;;;
+PROV3405;Palu;;;;;;;;;;;;;
 PROV3406;Artik;;;;;;;;;;;;;
 PROV3407;Maysan;;;;;;;;;;;;;
 PROV3408;Cherbourg;;;;;;;;;;;;;
