--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9495,7 +9495,7 @@ PROV1106;Agdam;Agdam;Agdam;;Agdam;;;;;;;;;
 PROV1107;Lankaran;Lankaran;Lankaran;;Lankaran;;;;;;;;;
 PROV1108;Tabriz;Tabriz;Tabriz;;Tabrîz;;;;;;;;;
 PROV1109;Khvoy;Khvoy;Khvoy;;Jvoy;;;;;;;;;
-PROV1111;Sablagh;Sablagh;Sablagh;;Sablagh;;;;;;;;;
+PROV1111;Kerkûk;Kerkûk;Kerkûk;;Kerkûk;;;;;;;;;
 PROV1112;Ardabil;Ardabil;Ardabil;;Ardebil;;;;;;;;;
 PROV1113;Rasht;Rasht;Rasht;;Rasht;;;;;;;;;
 PROV1114;Habibabad;Noshehr;Noshehr;;Noshehr;;;;;;;;;
