--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -220,7 +220,7 @@ WUR;Wurttemberg;;;;;;;;;
 LUB;Lubeck;;;;;;;;;
 PTR;Principality of Trinidad;;;;;;;;;
 PTR_ADJ;Trinidadian;;;;;;;;;
-BOL_colonial_company;Grand Duchy of Charcas;;;;;;;;;
+BOL_colonial_company;Grã-ducado de Charcas;;;;;;;;;
 BOL_colonial_company_2;Alto Peru;;;;;;;;;
 BOL_colonial_company_3;Department of Bolívar;;;;;;;;;
 CHL_colonial_company;State of Chile;;;;;;;;;
@@ -241,6 +241,8 @@ IQC_constitutional_empire_ADJ;Iquichan;;;;;;;;;
 IQC_presidential_dictatorship;Iquicha;;;;;;;;;;;;;
 IQC_presidential_dictatorship_ADJ;Iquichan;;;;;;;;;
 IQC_ADJ;Inca;;;;;;;;;
+ENT_colonial_company;Grã-ducado de Y-tyba;;;;;;;;;
+URU_colonial_company_2;Grã-ducado da Cisplatina;;;;;;;;;
 PROV4069;Isla de los Estados;;;;;;;;;
 PROV4068;Huanta;;;;;;;;;
 PROV4058;Guanacache;;;;;;;;;
