--- a/GFM/localisation/000_Victoria Universalis.csv
+++ b/GFM/localisation/000_Victoria Universalis.csv
@@ -511,6 +511,7 @@ literacy_campaign;Literacy Campaign;;;;;;;;;;;;;
 small_baby_boom;Small Baby Boom;;;;;;;;;;;;;
 rgo_expansion;RGO Expansion;;;;;;;;;;;;;
 switched_production;Switched Production;;;;;;;;;;;;;
+switched_production_2;Switched Production;;;;;;;;;;;;;
 province_attract_immigrants;Immigration Focus;;;;;;;;;;;;;
 unemployment_fix;Unemployment Fix;;;;;;;;;;;;;
 colonial_railroad_nerf1;Colonial Railroad Nerf;;;;;;;;;;;;;
