--- a/GFM/localisation/00_NNM_modifiers.csv
+++ b/GFM/localisation/00_NNM_modifiers.csv
@@ -244,6 +244,7 @@ chinese_substate_desc;The oppression by the Qing Emperor has left our nation in 
 recent_crisis;Recent Crisis;;;;;;;;;;;;;
 recent_crisis_desc;We have been the instigators in a recent crisis. Until memories fade, the world will likely tend to overlook any further demands we make for our territories.;;;;;;;;;;;;;
 switched_production_desc;The province has just switched its major production, and locals are still acclimatizing to the change.;;;;;;;;;;;;;
+switched_production_2_desc;The province has just switched its major production, and locals are still acclimatizing to the change.;;;;;;;;;;;;;
 new_production;New Plantation;;;;;;;;;;;;;
 new_production_desc;A new plantation has been started in this province, moving production over to cash crops rather than than the traditional farming which has been done here by the natives.;;;;;;;;;;;;;
 emergency_tax_measures1;Emergency Measures;;;;;;;;;;;;;
