Modding because I came early from Uni

--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -1134,13 +1134,13 @@ EVT4661009OPTA;Lima will be the new capital.;;;;;;;;;;;;;
 EVT4661009OPTB;Cusco, the old imperial city.;;;;;;;;;;;;;
 EVT4661009OPTC;A new Tacna will be founded as the capital.;;;;;;;;;;;;;
 EVT4661009OPTD;Sucre is an important city.;;;;;;;;;;;;;
-EVTNAME33042;A New Capital for Our Nation;;;;;;;;;;;;;
-EVTDESC33042;$COUNTRY$ is united and many in the government argue that the current capital is not a suitable location to command our nation. A few proposals came forward for suitable cities that could replace it, now it's only a matter of choosing one.;;;;;;;;;;;;;
-EVT33042OPTA;Berlin will be the new capital.;;;;;;;;;;;;;
-EVT33042OPTB;Hamburg is a suitable location.;;;;;;;;;;;;;
-EVT33042OPTC;Hanover is strategically located.;;;;;;;;;;;;;
-EVT33042OPTD;Frankfurt is an important city.;;;;;;;;;;;;;
-EVT33042OPTE;The current capital is fine.;;;;;;;;;;;;;
+EVTNAME33042;A New Capital for Our Nation?;;;;;;;;;;;;;
+EVTDESC33042;Now that $COUNTRY$ is united and there has been some discussion in our new government about which city should be the capital of our nation. While the discussion has mostly settled on Berlin, a few proposals came forward for suitable cities that could replace it, now it's only a matter of choosing one, if we are to replace it at all.;;;;;;;;;;;;;
+EVT33042OPTA;Wien, the capital of the Habsburgs.;;;;;;;;;;;;;
+EVT33042OPTB;Aachen, the capital of Charlemagne.;;;;;;;;;;;;;
+EVT33042OPTC;Leipzig, in honor to the Battle of Nations.;;;;;;;;;;;;;
+EVT33042OPTD;Frankfurt, the capital of the old German Confederation.;;;;;;;;;;;;;
+EVT33042OPTE;Berlin, the capital of the Hohenzollerns.;;;;;;;;;;;;;
 EVTNAME80128;Dungan Revolt in Tsinghai;;;;;;;;;;;;;
 EVTDESC80128;After rival Sufi Naqshbandi spiritual orders had fought and accused each other of various misdeeds, instead of continuing the violence they decided to use $COUNTRY$ legal system to solve the dispute. They filed opposing lawsuits through the office of the Sining Prefect and the judge in the case decided not to issue a ruling on which group was superior to the other in matters of all Islamic affairs, and urged them to behave. As a result, both groups resorted to violence. A taotai was sent by $COUNTRY$ to crush the perpetrators of the violence, which ended in several deaths. This led the involved parties in the dispute to rebel against $COUNTRY$. In Xunhua, Tsinghai, masses of Hui, Dongxiang, Bao'an, and Salars were incited to revolt against the Qing by the Multicolored Mosque leader Ma Yonglin.;;;;;;;;;;;;;
 EVT80128OPTA;Crush the rebels!;;;;;;;;;;;;;
