Minor spelling mistake

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -241,7 +241,7 @@ IQC_constitutional_empire_ADJ;Iquichan;;;;;;;;;
 IQC_presidential_dictatorship;Iquicha;;;;;;;;;;;;;
 IQC_presidential_dictatorship_ADJ;Iquichan;;;;;;;;;
 IQC_ADJ;Inca;;;;;;;;;
-ENT_colonial_company;Grã-ducado de Y-tyba;;;;;;;;;
+ENT_colonial_company;Grã-ducado de Y'tyba;;;;;;;;;
 URU_colonial_company_2;Grã-ducado da Cisplatina;;;;;;;;;
 PROV4069;Isla de los Estados;;;;;;;;;
 PROV4068;Huanta;;;;;;;;;
