--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -507,7 +507,7 @@ PROV3249;Old Tientsin;;;;;;;;;;;;;
 PROV3250;Fribourg;;;;;;;;;;;;;
 PROV3251;Monaco;;;;;;;;;;;;;
 PROV3252;Andorra;;;;;;;;;;;;;
-PROV3253;Liechtenstein;;;;;;;;;;;;;
+PROV3253;Vaduz;;;;;;;;;;;;;
 PROV3254;Bückeburg;;;;;;;;;;;;;
 PROV3255;Gera;;;;;;;;;;;;;
 PROV3256;Sondershausen;;;;;;;;;;;;;
