--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -452,14 +452,20 @@ DRV_semi_constitutional_empire_ADJ;Darvazi;;;;;;;;;;;;;
 DRV_constitutional_empire_ADJ;Darvazi;;;;;;;;;;;;;
 ca_slapping_siberia;Claims over Siberia;;;;;;;;;;;;;
 ca_slapping_siberia_desc;Our resolve to push the Russians back beyond the Urals is still respected.;;;;;;;;;;;;;
-KUN_absolute_empire;The Kattaghan Empire;;;;;;;;;;;;;
-KUN_semi_constitutional_empire;The Kattaghan Empire;;;;;;;;;;;;;
-KUN_constitutional_empire;The Kattaghan Empire;;;;;;;;;;;;;
-KUN_absolute_empire_ADJ;Kattaghan;;;;;;;;;;;;;
-KUN_semi_constitutional_empire_ADJ;Kattaghan;;;;;;;;;;;;;
-KUN_constitutional_empire_ADJ;Kattaghan;;;;;;;;;;;;;
+KUN_absolute_empire;The Qataghan Empire;;;;;;;;;;;;;
+KUN_semi_constitutional_empire;The Qataghan Empire;;;;;;;;;;;;;
+KUN_constitutional_empire;The Qataghan Empire;;;;;;;;;;;;;
+KUN_absolute_empire_ADJ;Qataghan;;;;;;;;;;;;;
+KUN_semi_constitutional_empire_ADJ;Qataghan;;;;;;;;;;;;;
+KUN_constitutional_empire_ADJ;Qataghan;;;;;;;;;;;;;
 KUN_conservative;Qataghanlar;;;;;;;;;;;;;
-KHI_conservative_1;Qo'ng'irotlar;;;;;;;;;;;;;
+SSB_absolute_empire;The Keneges Empire;;;;;;;;;;;;;
+SSB_semi_constitutional_empire;The Keneges Empire;;;;;;;;;;;;;
+SSB_constitutional_empire;The Keneges Empire;;;;;;;;;;;;;
+SSB_absolute_empire_ADJ;Keneges;;;;;;;;;;;;;
+SSB_semi_constitutional_empire_ADJ;Keneges;;;;;;;;;;;;;
+SSB_constitutional_empire_ADJ;Keneges;;;;;;;;;;;;;
+SSB_conservative;Kenegeslar;;;;;;;;;;;;;
 mughal_zindabad_title;Victory over the British;;;;;;;;;;;;;
 mughal_zindabad_desc;The Sepoys have been victorious and the British are now powerless to hold onto India. Let us send them a formal message demanding their official withdrawal from the subcontinent.;;;;;;;;;;;;;
 AFG_conservative;Loya Jirga;;;;;;;;;;;;;
