--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4334,11 +4334,11 @@ JOR_semi_constitutional_empire;Hashemite Kingdom of Transjordan;;;;;;;;;;;;;
 JOR_semi_constitutional_empire_ADJ;Transjordanian;;;;;;;;;;;;;
 JOR_constitutional_empire;Hashemite Kingdom of Transjordan;;;;;;;;;;;;;
 JOR_constitutional_empire_ADJ;Transjordanian;;;;;;;;;;;;;
-JOR_absolute_monarchy;The Kingdom of Khaza'il;;;;;;;;;;;;;
+JOR_absolute_monarchy;The Khaza'il Kingdom;;;;;;;;;;;;;
 JOR_absolute_monarchy_ADJ;Khaza'il;;;;;;;;;;;;;
-JOR_prussian_constitutionalism;The Kingdom of Khaza'il;;;;;;;;;;;;;
+JOR_prussian_constitutionalism;The Khaza'il Kingdom;;;;;;;;;;;;;
 JOR_prussian_constitutionalism_ADJ;Khaza'il;;;;;;;;;;;;;
-JOR_hms_government;The Kingdom of Khaza'il;;;;;;;;;;;;;
+JOR_hms_government;The Khaza'il Kingdom;;;;;;;;;;;;;
 JOR_hms_government_ADJ;Khaza'il;;;;;;;;;;;;;
 TRI_democracy;Tripolitanian Republic;;;;;;;;;;;;;
 TRI_democracy_ADJ;Tripolitanian;;;;;;;;;;;;;
@@ -4383,9 +4383,9 @@ JZR_constitutional_empire;The Jalili Kingdom;;;;;;;;;;;;;
 JZR_absolute_empire_ADJ;Jalili;;;;;;;;;;;;;
 JZR_semi_constitutional_empire_ADJ;Jalili;;;;;;;;;;;;;
 JZR_constitutional_empire_ADJ;Jalili;;;;;;;;;;;;;
-DUB_absolute_empire;Muntafiq;;;;;;;;;;;;;
-DUB_semi_constitutional_empire;Muntafiq;;;;;;;;;;;;;
-DUB_constitutional_empire;Muntafiq;;;;;;;;;;;;;
+DUB_absolute_empire;The Muntafiq Confederation;;;;;;;;;;;;;
+DUB_semi_constitutional_empire;The Muntafiq Confederation;;;;;;;;;;;;;
+DUB_constitutional_empire;The Muntafiq Confederation;;;;;;;;;;;;;
 DUB_absolute_empire_ADJ;Muntafiqi;;;;;;;;;;;;;
 DUB_semi_constitutional_empire_ADJ;Muntafiqi;;;;;;;;;;;;;
 DUB_constitutional_empire_ADJ;Muntafiqi;;;;;;;;;;;;;
@@ -4402,9 +4402,9 @@ PLS_constitutional_empire;The Emirate of Muhammara;;;;;;;;;;;;;
 PLS_absolute_empire_ADJ;Kaabi;;;;;;;;;;;;;
 PLS_semi_constitutional_empire_ADJ;Kaabi;;;;;;;;;;;;;
 PLS_constitutional_empire_ADJ;Kaabi;;;;;;;;;;;;;
-KHZ_absolute_empire;The Emirate of Masha'sha'iya;;;;;;;;;;;;;
-KHZ_semi_constitutional_empire;The Emirate of Masha'sha'iya;;;;;;;;;;;;;
-KHZ_constitutional_empire;The Emirate of Masha'sha'iya;;;;;;;;;;;;;
-KHZ_absolute_empire_ADJ;Musha'sha';;;;;;;;;;;;;
-KHZ_semi_constitutional_empire_ADJ;Musha'sha';;;;;;;;;;;;;
-KHZ_constitutional_empire_ADJ;Musha'sha';;;;;;;;;;;;;
+KHZ_absolute_empire;The Mushasha Emirate;;;;;;;;;;;;;
+KHZ_semi_constitutional_empire;The Emirate Mushasha;;;;;;;;;;;;;
+KHZ_constitutional_empire;The Mushasha Emirate;;;;;;;;;;;;;
+KHZ_absolute_empire_ADJ;Mushasha;;;;;;;;;;;;;
+KHZ_semi_constitutional_empire_ADJ;Mushasha;;;;;;;;;;;;;
+KHZ_constitutional_empire_ADJ;Mushasha;;;;;;;;;;;;;
