--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4402,9 +4402,9 @@ PLS_constitutional_empire;The Emirate of Muhammara;;;;;;;;;;;;;
 PLS_absolute_empire_ADJ;Kaabi;;;;;;;;;;;;;
 PLS_semi_constitutional_empire_ADJ;Kaabi;;;;;;;;;;;;;
 PLS_constitutional_empire_ADJ;Kaabi;;;;;;;;;;;;;
-KHZ_absolute_empire;The Emirate of Masha'sha'iya;;;;;;;;;;;;;
-KHZ_semi_constitutional_empire;The Emirate of Masha'sha'iya;;;;;;;;;;;;;
-KHZ_constitutional_empire;The Emirate of Masha'sha'iya;;;;;;;;;;;;;
-KHZ_absolute_empire_ADJ;Musha'sha';;;;;;;;;;;;;
-KHZ_semi_constitutional_empire_ADJ;Musha'sha';;;;;;;;;;;;;
-KHZ_constitutional_empire_ADJ;Musha'sha';;;;;;;;;;;;;
+KHZ_absolute_empire;The Emirate of Mushasha;;;;;;;;;;;;;
+KHZ_semi_constitutional_empire;The Emirate of Mushasha;;;;;;;;;;;;;
+KHZ_constitutional_empire;The Emirate of Mushasha;;;;;;;;;;;;;
+KHZ_absolute_empire_ADJ;Masha'sha'iya;;;;;;;;;;;;;
+KHZ_semi_constitutional_empire_ADJ;Masha'sha'iya;;;;;;;;;;;;;
+KHZ_constitutional_empire_ADJ;Masha'sha'iya;;;;;;;;;;;;;
