Edits to pops and oobs

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -259,7 +259,7 @@ PROV1119;Kermanshah;;;;;;;;;;;;;
 PROV1152;Jeddah;;;;;;;;;;;;;
 PROV1178;Sana'a;;;;;;;;;;;;;
 PROV1179;al-Hudaydah;;;;;;;;;;;;;
-PROV1181;Akmoly;;;;;;;;;;;;;
+PROV1181;Akmolly;;;;;;;;;;;;;
 PROV1182;Orda;;;;;;;;;;;;;
 PROV1210;Faizabad;;;;;;;;;;;;;
 PROV1235;Shimla;;;;;;;;;;;;;
