Adai Revolt loc and flavour

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3946,6 +3946,8 @@ BKY_constitutional_empire;Bukey Horde;;;;;;;;;;;;;
 BKY_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_semi_constitutional_empire;Bukey Horde;;;;;;;;;;;;;
 BKY_semi_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
+BKY_prov_gov_liberal;The Adai Uprising;;;;;;;;;;;;;
+BKY_prov_gov_liberal_ADJ;Adai;;;;;;;;;;;;;
 BOI;Boina;;;;;;;;;;;;;
 BOI_ADJ;Boina;;;;;;;;;;;;;
 GMB_absolute_monarchy;Saloum;;;;;;;;;;;;;
