--- a/GFM/localisation/FlavoursMod_events.csv
+++ b/GFM/localisation/FlavoursMod_events.csv
@@ -539,6 +539,10 @@ EVTDESC34627;We have successfully united the Northern German states under the $C
 EVTOPTA34627;The whole Duchy will join $COUNTRY$. §RGain 3 infamy§W;;;;;;;;;;;;;
 EVTOPTB34627;Yes, the Main River shall be our southern border.;;;;;;;;;;;;;
 EVTOPTC34627;Hessen will remain outside of $COUNTRY$;;;;;;;;;;;;;
+EVTNAME44848468;The Fate of Großherzogtum Hessen;;;;;;;;;;;;;
+EVTDESC44848468;We have successfully united the Southern German states, however some issues remain. A cultural demarcation between the North and South has always been the Main River, so it would make sense to declare it as the northern border of $COUNTRY$. But that would also mean splitting the Grand Duchy of Hesse in two, taking the Hessian hinterland tightly as a member state, whilst leaving the rest of the Duchy outside of their direct influence.;;;;;;;;;;;;;
+EVTOPTA44848468;The whole Duchy will join them. §RGain 1.5 infamy§W;;;;;;;;;;;;;
+EVTOPTB44848468;Yes, the Main River shall be their northern border.;;;;;;;;;;;;;
 EVTNAME99105;Conflict in Bhutan;;;;;;;;;;;;;
 EVTDESC99105;Following a peace mission sent to Bhutan in early $YEAR$, in the wake of the recent conclusion of a civil war there, under Ashley Eden. The dzongpon of Punakha – who had emerged victorious – had broken with the central government and set up a rival Druk Desi while the legitimate druk desi sought the protection of the penlop of Paro and was later deposed. \n\nThe British mission dealt alternately with the rival penlop of Paro and the penlop of Trongsa (the latter acted on behalf of the druk desi), but Bhutan rejected the peace and friendship treaty it offered. \n\nBritain soon declared war. Bhutan had no regular army, and what forces existed were composed of dzong guards armed with matchlocks, bows and arrows, swords, knives, and catapults. Some of these dzong guards, carrying shields and wearing chainmail armor, engaged the well-equipped British forces.;;;;;;;;;;;;;
 EVT99105OPTA;Time to put the Bhutanese down. §RGain 3 infamy§W;;;;;;;;;;;;;
