enclaves, no lake cheese

--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -705,7 +705,11 @@ EVTDESC54679068;\n\nWithout a land connection to Mayumbe, the owners of Lwaagu h
 EVTDESC54678864;\n\nWithout a land connection to Chumikan, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
 EVTDESC54678865;\n\nWithout a land connection to Chumikan, the owners of Ayan have taken it over.;;;;;;;;;;;;;
 EVTDESC33545674;\n\nWithout a land connection to Socaire, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
+EVTDESC565643233;\n\nWithout a land connection to Jaen, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
+EVTDESC565643235;\n\nWithout a land connection to Iquitos, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
 EVTDESC33545675;\n\nWithout a land connection to Socaire, the owners of Antofagasta have taken it over.;;;;;;;;;;;;;
+EVTDESC565643232;\n\nWithout a land connection to Jaen, the owners of Moyobamba have taken it over.;;;;;;;;;;;;;
+EVTDESC565643234;\n\nWithout a land connection to Iquitos, the owners of San Roque have taken it over.;;;;;;;;;;;;;
 EVTDESC123803;\n\nIt has been long overdue that our border with India is properly demarcated, but with our recent defeat at the hands of the British it will cost us dearly.;;;;;;;;;;;;;
 EVTDESC123802;\n\nA cholera outbreak in Soho, London, has been investigated by physician John Snow. His findings showed that germ-contaminated water from the Broad Street Pump was the source of cholera rather than miasma. Its decomission saved many lives.;;;;;;;;;;;;;
 EVTDESC123800;\n\nThere is a major outbreak of the bubonic plague in Hong Kong. The unsanitary living conditions of the Chinese community and proliferation of rats is to blame. Despite demolition of plague houses, the spread cannot be contained.;;;;;;;;;;;;;
