Added uncolonized region in the Pamir

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -104,7 +104,7 @@ name_oslo_title;Rename Christiania;;;;;;;;;;;;;
 name_oslo_desc;After being destroyed by a fire in 1624, during the reign of King Christian IV, the city then known as Oslo was moved closer to Akershus Fortress and renamed Christiania in the king's honor. As the years passed many in the government feel the original name, derived from the Old Norse, would be a much better name to represent the city's legacy than the name of an old monarch.;;;;;;;;;;;;;
 january_uprising_victory_title;The Polish Uprising is Victorious;;;;;;;;;;;;;
 january_uprising_victory_desc;The success of the latest uprising means the recognition of Poland as a free, sovereign state. Our days of being subjected to foreign powers are over.;;;;;;;;;;;;;
-copenhagen_convention_title;Call for a Convention Over the Danish Straits;;;;;;;;;;;;;
+copenhagen_convention_title;Call for a convention over the Danish Straits;;;;;;;;;;;;;
 copenhagen_convention_desc;The Sound Dues (toll) was introduced by King Eric of Pomerania in 1429 and remains in effect to this day. A toll on all the trade passing through the Danish straits, these barriers damage our commerce in the region. We can call a Convention to solve this situation once and for all, if we have the money to pay the proper indemnifications and to act as a guarantor that this money will be paid.;;;;;;;;;;;;;
 abolish_sound_dues_title;Abolish the Sound Dues;;;;;;;;;;;;;
 abolish_sound_dues_desc;They refused to abolish the tolls on the Danish straits, but now they have no choice. We have the power to end their choke-hold on the Baltic sea. ;;;;;;;;;;;;;
