fixes and adjustments

--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -839,7 +839,7 @@ moro;Moro;;;;;;;;;;;;;
 welsh;Welsh;;;;;;;;;;;;;
 wallonian;Walloon;;;;;;;;;;;;;
 volga_german;Eastern German;;;;;;;;;;;;;
-arpitan;Arpitan;;;;;;;;;;;;;
+arpitan;Romand;;;;;;;;;;;;;
 hanhui;Hui;;;;;;;;;;;;;
 siebenburger;Siebenburger;;;;;;;;;;;;;
 anglo_canadian;Anglo-Canadian;Anglo-canadien;Anglokanadisch;;Anglocanadiense;;;;;;;;;
