Finally implementing something suggested by St. Karl Marx

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -129,7 +129,7 @@ PROV4025;Kampong Thom;;;;;;;;;
 PROV522;Leiria;;;;;;;;;
 PROV4178;Kilai;;;;;;;;;
 PROV4179;Pilam;;;;;;;;;
-PROV2562;Yushan;;;;;;;;;
+PROV2562;Tsuisualian;;;;;;;;;
 PUR;Purran;;;;;;;;;
 BRZ_colonial_company_2;France Antarctique;;;;;;;;;
 PAA_colonial_company_2;France Équinoxiale;;;;;;;;;
