--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -77,7 +77,7 @@ KYRGYZRAIDS2;Recent raids against our neighbours have brought back a great deal 
 kaz_conquer_kokand_title;Conquer the Khanate of Kokand;;;;;;;;;;;;;
 kaz_conquer_kokand_desc;Temp;;;;;;;;;;;;;
 kaz_conquer_kyrgyz_title;Put an end to Kyrgyz raids;;;;;;;;;;;;;
-kaz_conquer_kyrgyz_desc;Ever since Omron Khan's revolt against the ;;;;;;;;;;;;;
+kaz_conquer_kyrgyz_desc;Ever since Omron Khan's revolt against the Temp;;;;;;;;;;;;;
 great_tartaria1_title;Reclaim the Former Tatar Homeland;;;;;;;;;;;;;
 great_tartaria1_desc;Epic Tartaria Larp Stage 1;;;;;;;;;;;;;
 great_tartaria2_title;Proclaim the Empire of Great Tartaria;;;;;;;;;;;;;
