Kazakh-Qing War beta (no loc)

--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -74,10 +74,15 @@ QINGZHETYSU;\n\nAs we have managed to extend our control west over the entirety 
 QINGZHETYSU2;\n\nAfter a period of rapid expansion into the Zhetysu region, an envoy from China has arrived detailing the establishment of a formal border between our two peoples. The resulting border would have us lose control over the grazing lands currently inhabited by the Eastern Nayman tribe, but would also grant us a claim over the tribes of the Senior Jüz not under Chinese rule.;;;;;;;;;;;;;
 KYRGYZRAIDS;The continued existence of the Kara-Kyrgyz Khanate has lead to an increase of hostile raids on our borders.;;;;;;;;;;;;;
 KYRGYZRAIDS2;Recent raids against our neighbours have brought back a great deal of wealth and prestige for the Khanate.;;;;;;;;;;;;;
+KAZQNG1;\n\nThe Kazakhs are being meanies, lets set up a border;;;;;;;;;;;;;
+KAZQNG2;\n\nThe Qing are bribing us with land;;;;;;;;;;;;;
+KAZQNG3;\n\nKazakhs said no : (;;;;;;;;;;;;;
+KAZQNG4;\n\nKazakhs dabbed on the Qing;;;;;;;;;;;;;
+KAZQNG4;\n\nQing dabbed on the Kazakhs;;;;;;;;;;;;;
+kaz_conquer_kyrgyz_title;Put an end to the Kyrgyz raids;;;;;;;;;;;;;
+kaz_conquer_kyrgyz_desc;§RGain 3 infamy§ Ever since Omron Khan's revolt against the Khan of Kokand, the Kyrgyz have begun raiding the Kazakh Steppe wholesale. With our backs against the wall against the Kokand to the south and the Russians to the north, the Kyrgyz see this as a golden opportunity to pounce on a weak and defenseless neighbour. Let us mount a proper campaign against them and show them just how wrong they are!;;;;;;;;;;;;;
 kaz_conquer_kokand_title;Conquer the Khanate of Kokand;;;;;;;;;;;;;
-kaz_conquer_kokand_desc;Temp;;;;;;;;;;;;;
-kaz_conquer_kyrgyz_title;Put an end to Kyrgyz raids;;;;;;;;;;;;;
-kaz_conquer_kyrgyz_desc;Ever since Omron Khan's revolt against the Temp;;;;;;;;;;;;;
+kaz_conquer_kokand_desc;§RGain 5 infamy§ Dab on the Kokand(eez nuts) §This could bring us into conflict with the Chinese if we aren't diplomatic with them.§W;;;;;;;;;;;;;
 great_tartaria1_title;Reclaim the Former Tatar Homeland;;;;;;;;;;;;;
 great_tartaria1_desc;Epic Tartaria Larp Stage 1;;;;;;;;;;;;;
 great_tartaria2_title;Proclaim the Empire of Great Tartaria;;;;;;;;;;;;;
