--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -1738,7 +1738,7 @@ EVT952506OPTB;We can't afford war with $FROMCOUNTRY$;;;;;;;;;;;;;
 EVTDESC952506;The English have accepted our offer, leaving Aceh to its own devices. But, it would seem that there is still someone bent on defending Aceh, $FROMCOUNTRY$! They have announced that Aceh is under their protection and they won't let us take it without their intervention. While Aceh was indeed under $FROMCOUNTRY_ADJ$ protection ever since the 16th century, we weren't expecting the "Sick Man of Europe" to actually stand up for Aceh. While we have British support, they stated they won't help us conquer the Sultanate, only promissing to not get in our way and work so other Great Powers don't get in your way, but it seems like the latter promise didn't go far...;;;;;;;;;;;;;
 EVT952505OPTB;Such a great diplomatic victory!;;;;;;;;;;;;;
 EVTNAME952506;$FROMCOUNTRY$ intervenes!;;;;;;;;;;;;;
-EVTNAME952505;The British accept!;;;;;;;;;;;;;
+EVTNAME952505;Aceh is ours!;;;;;;;;;;;;;
 EVTDESC952505;$FROMCOUNTRY_ADJ$ diplomats returned agreeing with our terms! Our colonies in the Gold Coast will be immediately transfered to them, as they let us take over Aceh, allowing us to have hegemony over Sumatra! They won't help us conquering the Sultanate, but at least they will not get in our way and will work so other Great Powers don't get in your way.;;;;;;;;;;;;;
 EVTNAME952504;The Dutch threaten Aceh!;;;;;;;;;;;;;
 EVTDESC952504;Envoys from the Sultanate of Aceh informs us that $FROMCOUNTRY_ADJ$ diplomats have agreed to let the Dutch conquer them! As Aceh has formally been our protectorate since the 16th century we are inclined to help them, but that would for sure draw the ire of both the Dutch and the English, which we may not be ready to face.;;;;;;;;;;;;;
