--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -1745,7 +1745,7 @@ EVTNAME952504;The Dutch threaten Aceh!;;;;;;;;;;;;;
 EVTDESC952504;\n\nEnvoys from the Sultanate of Aceh informs us that $FROMCOUNTRY_ADJ$ diplomats have agreed to let the Dutch conquer them! As Aceh has formally been our protectorate since the 16th century we are inclined to help them, but that would for sure draw the ire of both the Dutch and the English, which we may not be ready to face.;;;;;;;;;;;;;
 EVT952504OPTA;We have no choice but to let Aceh go.;;;;;;;;;;;;;
 EVT952504OPTB;We won't let our allies be conquered like that! §RGain 3 infamy§W;;;;;;;;;;;;;
-EVTNAME952503;\n\nThe Dutch Proposal;;;;;;;;;;;;;
+EVTNAME952503;The Dutch Proposal;;;;;;;;;;;;;
 EVTDESC952503;\n\nThe Dutch approached us about their colony in the Gold Coast. It seems that the colony has become rather unprofitable to them and they would love to hand it over to us, as long as we recognize their claim over Aceh, in Sumatra. \n\nWhile the Dutch colony may not be profitable to them, with out existing outposts in the region their lands would probably be much more profitable to us. Other than that, of course, the treaty would also resolve some minor questions between our nations, like Indian labor in Suriname and trade rights in Siak, turning it rather profitable to us, at the coast of Aceh.;;;;;;;;;;;;;
 EVT952503OPTA;Let them have it, we don't need anything in exchange.;;;;;;;;;;;;;
 EVT952503OPTB;Their possessions in the Gold Coast would make a nice deal.;;;;;;;;;;;;;
