--- a/GFM/localisation/FlavoursMod_events.csv
+++ b/GFM/localisation/FlavoursMod_events.csv
@@ -540,7 +540,7 @@ EVTOPTA34627;The whole Duchy will join $COUNTRY$. §RGain 3 infamy§W;;;;;;;;;;;;;
 EVTOPTB34627;Yes, the Main River shall be our southern border.;;;;;;;;;;;;;
 EVTOPTC34627;Hessen will remain outside of $COUNTRY$;;;;;;;;;;;;;
 EVTNAME44848468;The Fate of Großherzogtum Hessen;;;;;;;;;;;;;
-EVTDESC44848468;We have successfully united the Southern German states, however some issues remain. A cultural demarcation between the North and South has always been the Main River, so it would make sense to declare it as the northern border of $COUNTRY$. But that would also mean splitting the Grand Duchy of Hesse in two, taking the Hessian hinterland tightly as a member state, whilst leaving the rest of the Duchy outside of their direct influence.;;;;;;;;;;;;;
+EVTDESC44848468;\n\nWe have successfully united the Southern German states, however some issues remain. A cultural demarcation between the North and South has always been the Main River, so it would make sense to declare it as the northern border of $COUNTRY$. But that would also mean splitting the Grand Duchy of Hesse in two, taking the Hessian hinterland tightly as a member state, whilst leaving the rest of the Duchy outside of their direct influence.;;;;;;;;;;;;;
 EVTOPTA44848468;The whole Duchy will join them. §RGain 1.5 infamy§W;;;;;;;;;;;;;
 EVTOPTB44848468;Yes, the Main River shall be their northern border.;;;;;;;;;;;;;
 EVTNAME99105;Conflict in Bhutan;;;;;;;;;;;;;
