Diacritic Gaming (Pt.1)
Contains all of the Diacritic additions to Persian renames for PER cores outside of modern Iran (barring a few exceptions in the southern coast)
Also contains a few new renames

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -100,16 +100,16 @@ PROV1105;Yelizavetpol;;;;;;;;;;;;;
 PROV1119;Poshtkuh;;;;;;;;;;;;;
 PROV1127;Esfahan;;;;;;;;;;;;;
 PROV1128;Soltanabad;;;;;;;;;;;;;
-PROV1136;Bushehr;;;;;;;;;;;;;
+PROV1136;Bûšehr;;;;;;;;;;;;;
 PROV1137;Eqlid;;;;;;;;;;;;;
-PROV1138;Bandar-e Kangan;;;;;;;;;;;;;
+PROV1138;Bandar-e Kangân;;;;;;;;;;;;;
 PROV1141;Bandar-e Lengeh;;;;;;;;;;;;;
-PROV1142;Bandar-e 'Abbas;;;;;;;;;;;;;
+PROV1142;Bandar-e 'Abbâs;;;;;;;;;;;;;
 PROV1144;Faraj;;;;;;;;;;;;;
-PROV1145;Kafshak-Jask;;;;;;;;;;;;;
+PROV1145;Kafšak-Jâsk;;;;;;;;;;;;;
 PROV1168;Sharjah;;;;;;;;;;;;;
 PROV1204;Ashqabad;;;;;;;;;;;;;
-PROV1206;Çärjew;;;;;;;;;;;;;
+PROV1206;Amul;;;;;;;;;;;;;
 PROV1207;Dushanbe Qurghon;;;;;;;;;;;;;
 PROV1208;Baluk-Barai;;;;;;;;;;;;;
 PROV1211;Qonduz;;;;;;;;;;;;;
@@ -131,10 +131,11 @@ PROV3355;Lash wa Juwayn;;;;;;;;;;;;;
 PROV3356;Ghoryan;;;;;;;;;;;;;
 PROV3386;Shamakhi;;;;;;;;;;;;;
 PROV3389;Anah;;;;;;;;;;;;;
-PROV3406;al-Jahra;;;;;;;;;;;;;
+PROV3406;Abu Faterah;;;;;;;;;;;;;
+PROV935;Qurain;;;;;;;;;;;;;
 PROV3428;al-Raqqah;;;;;;;;;;;;;
 PROV3495;Kermanshah;;;;;;;;;;;;;
-PROV3496;Jiroft;;;;;;;;;;;;;
+PROV3496;Jîroft;;;;;;;;;;;;;
 PROV3497;Tabas;;;;;;;;;;;;;
 PROV3498;Sarakhs;;;;;;;;;;;;;
 PROV3499;Kwakwani;;;;;;;;;;;;;
@@ -144,14 +145,14 @@ PROV3502;Dehestan;;;;;;;;;;;;;
 PROV3503;Aslanduz;;;;;;;;;;;;;
 PROV3504;Marand;;;;;;;;;;;;;
 PROV3505;Kyzyl-Su;;;;;;;;;;;;;
-PROV3506;Kharan;;;;;;;;;;;;;
+PROV3506;Haran;;;;;;;;;;;;;
 PROV3507;Panjgur;;;;;;;;;;;;;
 PROV3508;Pishukan;;;;;;;;;;;;;
 PROV3509;Sandak;;;;;;;;;;;;;
 PROV3510;Kacchi;;;;;;;;;;;;;
 PROV3511;Zaranj;;;;;;;;;;;;;
 PROV3512;Dozdab;;;;;;;;;;;;;
-PROV3513;Lashkargah;;;;;;;;;;;;;
+PROV3513;Nad-i Ali;;;;;;;;;;;;;
 PROV3514;Panjdeh;;;;;;;;;;;;;
 PROV3515;Dubai;;;;;;;;;;;;;
 PROV3516;Mazar-e Sharif;;;;;;;;;;;;;
