--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -243,7 +243,7 @@ PROV1048;Yekaterinodar;;;;;;;;;;;;;
 PROV1049;Ubykhia;;;;;;;;;;;;;
 PROV1065;Nyagan;;;;;;;;;;;;;
 PROV1070;Yeniseysk;;;;;;;;;;;;;
-PROV1071;Qeshm;;;;;;;;;;;;;
+PROV1071;Qešm;;;;;;;;;;;;;
 PROV1073;Gizhiga;;;;;;;;;;;;;
 PROV1076;Nizhneudinsk;;;;;;;;;;;;;
 PROV1080;Chumikan;;;;;;;;;;;;;
@@ -445,7 +445,7 @@ PROV2620;Susuman;;;;;;;;;;;;;
 PROV2629;Dane-Zaa;;;;;;;;;;;;;
 PROV2631;Unalakleet;;;;;;;;;;;;;
 PROV2632;Kwangchowan;;;;;;;;;;;;;
-PROV2638;Nosratabad;;;;;;;;;;;;;
+PROV2638;Nostratabad;;;;;;;;;;;;;
 PROV2639;al-Qurayyat;;;;;;;;;;;;;
 PROV2643;Hajjiabad;;;;;;;;;;;;;
 PROV2645;Bodaybo;;;;;;;;;;;;;
@@ -512,7 +512,7 @@ PROV3254;Bückeburg;;;;;;;;;;;;;
 PROV3255;Gera;;;;;;;;;;;;;
 PROV3256;Sondershausen;;;;;;;;;;;;;
 PROV3257;Waldeck;;;;;;;;;;;;;
-PROV3258;Kech;;;;;;;;;;;;;
+PROV3258;Turbat;;;;;;;;;;;;;
 PROV3259;Jadegebiet;;;;;;;;;;;;;
 PROV3260;Sado;;;;;;;;;;;;;
 PROV3261;Pescara;;;;;;;;;;;;;
@@ -532,7 +532,7 @@ PROV3274;Svaneti;;;;;;;;;;;;;
 PROV3275;Tekalong;;;;;;;;;;;;;
 PROV3276;Kutai Timur;;;;;;;;;;;;;
 PROV3277;Hultschin;;;;;;;;;;;;;
-PROV3278;Manifa;;;;;;;;;;;;;
+PROV3278;Ras Mushaib;;;;;;;;;;;;;
 PROV3279;Kelmentsi;;;;;;;;;;;;;
 PROV3280;Edmundston;;;;;;;;;;;;;
 PROV3281;Fraustadt;;;;;;;;;;;;;
@@ -694,7 +694,7 @@ PROV3438;Yálta;;;;;;;;;;;;;
 PROV3439;Feodosiya;;;;;;;;;;;;;
 PROV3440;Longking;;;;;;;;;;;;;
 PROV3441;Shimbay;;;;;;;;;;;;;
-PROV3442;Darvaza;;;;;;;;;;;;;
+PROV3442;Kyzyl-Arbat;;;;;;;;;;;;;
 PROV3443;Curral Del Rey;;;;;;;;;;;;;
 PROV3444;Barbacena;;;;;;;;;;;;;
 PROV3445;Ipatinga;;;;;;;;;;;;;
@@ -1245,7 +1245,7 @@ AFG_1212;Herat;;;;;;;;;;;;;
 DEN_251;Island & Grønland;;;;;;;;;;;;;
 TUR_887;Erzurum;;;;;;;;;;;;;
 TAJ_1208;Tadzhikistan;;;;;;;;;;;;;
-NEJ_1164;Hassa;;;;;;;;;;;;;
+NEJ_1164;al-Hassa;;;;;;;;;;;;;
 RUS_2700;Vologda;;;;;;;;;;;;;
 EGY_843;Ege Adalari;;;;;;;;;;;;;
 TUR_832;Teselya;;;;;;;;;;;;;
@@ -1409,7 +1409,7 @@ JAP_1088;Ezo;;;;;;;;;;;;;
 AST_1097;New Caledonia;;;;;;;;;;;;;
 PER_1116;Mazandaran;;;;;;;;;;;;;
 PER_1128;Lorestan;;;;;;;;;;;;;
-PER_1132;Arabestan;;;;;;;;;;;;;
+PER_1132;Arabestân;;;;;;;;;;;;;
 PER_1136;Fars;;;;;;;;;;;;;
 PER_1140;Kerman;;;;;;;;;;;;;
 AFG_1209;Pashtunistan;;;;;;;;;;;;;
