--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9536,7 +9536,7 @@ PROV1157;Riyadh;Riyadh;Riyadh;;Riad;;;;;;;;;
 PROV1159;Halaban;Halaban;Halaban;;Halaban;;;;;;;;;
 PROV1160;Hail;Hail;Hail;;Hail;;;;;;;;;
 PROV1161;Sharurah;Sharurah;Sharurah;;Sharurah;;;;;;;;;
-PROV1162;Bahrain;Bahreïn;Bahrain;;Bahrain;;;;;;;;;
+PROV1162;Al-Manamah;Bahreïn;Bahrain;;Bahrain;;;;;;;;;
 PROV1163;Qatif;Qatif;Qatif;;Qatif;;;;;;;;;
 PROV1164;Hufuf;Hufuf;Hufuf;;Hufuf;;;;;;;;;
 PROV1165;Doha;Doha;Doha;;Doha;;;;;;;;;
@@ -9566,7 +9566,7 @@ PROV1216;Jalalabad;Jalalabad;Jalalabad;;Jalalabad;;;;;;;;;
 PROV1217;Ghazni;Ghazni;Ghazni;;Ghazni;;;;;;;;;
 PROV1218;Peshawar;Peshawar;Peshawar;;Peshawar;;;;;;;;;
 PROV1219;Quetta;Quetta;Quetta;;Quetta;;;;;;;;;
-PROV1220;Dalbandin;Dalbandin;Dalbandin;;Dalbandin;;;;;;;;;
+PROV1220;Naalbandin;Dalbandin;Dalbandin;;Dalbandin;;;;;;;;;
 PROV1221;Kalat;Kalat;Kalat;;Kalat;;;;;;;;;
 PROV1222;Bela;Bela;Bela;;Bela;;;;;;;;;
 PROV1223;Chitral;Chitral;Chitral;;Chitral;;;;;;;;;
